# leek_cat_quantization

./: README.md
test/: 01.py
web/backend/: README.md  pyproject.toml
web/backend/app/: config.py  routes.py  utils.py
web/backend/app/controllers/: stock.py
web/backend/instance/: gallery.db
web/backend/test/: 01.py
web/frontend/: package.json  pnpm-lock.yaml
web/frontend/apps/main_web/: package.json  pnpm-lock.yaml
web/frontend/apps/main_web/src/views/login/: index.tsx
web/frontend/apps/web/: package.json  tsconfig.json  vite.config.ts
web/frontend/apps/web/src/: App.tsx  main.tsx
web/frontend/apps/web/src/components/DiyModal/: index.tsx
web/frontend/apps/web/src/utils/: index.tsx  request.tsx  services.tsx  storage.ts  urls.tsx
入门/第10章：Ricequant回测选股分析实战/: 1_simple_demo.txt
入门/第11章：因子数据预处理/.ipynb_checkpoints/: 因子数据预处理 - 课程-checkpoint.ipynb  因子数据预处理-checkpoint.ipynb
入门/第12章：因子策略选股实例/: 2_因子策略.txt
入门/第14章：因子打分选股实战/: 3_因子打分选股.txt
入门/第15章：基于回归的策略分析/: 回归策略分析 - 课程.ipynb
入门/第15章：基于回归的策略分析/.ipynb_checkpoints/: 回归策略分析 - 课程-checkpoint.ipynb  回归策略分析-checkpoint.ipynb
入门/第16章：聚类与统计策略分析/.ipynb_checkpoints/: 15_trading_strategies_b-checkpoint.ipynb  聚类与统计策略-课程-checkpoint.ipynb
入门/第17章：fbprophet时间序列预测神器/: 1-Stocker Analysis .ipynb
入门/第5章：Pandas/tushare工具包/: tushare工具包.ipynb
入门/第6章：金融时间序列分析/: 金融时间序列分析 - .ipynb
入门/第7章：双均线交易策略实例/: 双均线策略实例 - 课程.ipynb
入门/第7章：双均线交易策略实例/.ipynb_checkpoints/: 双均线策略实例 - 课程-checkpoint.ipynb  双均线策略实例-checkpoint.ipynb
入门/第8章：策略评估指标/.ipynb_checkpoints/: 策略评估指标-checkpoint.ipynb
选股算法/: 超市战法.md
(+2 files in other folders)
